Misc. improvements:
- AllowedPackages is now a per-tester annotation
- Improve illegal package detection and handling
- JP code cleanup now removes unused imports after all other cleanup is done (prevents hanging illegal imports)
- OrderOfGrowthEstimator now returns ambiguity (how close to runner-up) alongside confidence
- Improve SystemCallRemover with type resolution and reflection
- Initial implementation of Tester.asymptotic for asymptotic order of growth assertions
- Cover more cases of file/class name mismatches
- Add warning for JP compact class comments bug (wait for JP to release fix)
- Housekeeping
- Removed Herobrine

Signed-off-by: Afonso Caniço <ambco@iscte-iul.pt>